# pytest_fixture_sharing

./: README.md
code_examples/sharing_between_projects/: README.md
code_examples/sharing_between_projects/blue_starter_project/: conftest.py
code_examples/sharing_between_projects/pytest-blue-flit/: README.md  pyproject.toml  tox.ini
code_examples/sharing_between_projects/pytest-blue-hatchling/: pyproject.toml
code_examples/sharing_between_projects/pytest-blue-hatchling/examples/: test_example.py
code_examples/sharing_between_projects/pytest-blue-hatchling/src/pytest_blue/: __init__.py
code_examples/sharing_between_projects/pytest-blue-setuptools/: LICENSE.txt  pyproject.toml  tox.ini
code_examples/sharing_in_the_same_project/one/: test_one.py
code_examples/sharing_in_the_same_project/two/: test_two.py
