[project]
name = "pytest-blue"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">3.7"
description = "pytest plugin, adds fixture `blue` for debug printing"
dynamic = ["version"]
dependencies = ["pytest", "rich"]
authors = [{name = "Brian Okken"}]
classifiers = [ "Framework :: Pytest", ]
[project.urls]
Home = "https://github.com/okken/pytest-blue"

[project.entry-points.pytest11]
pytest_blue = "pytest_blue.plugin"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "pytest_blue"

